# mang_lang

./: .gitignore  CMakeLists.txt  ideas.txt  imperative.txt  readme.md  readme.txt  scope.txt  syntax_diagrams.html
.github/workflows/: github-actions-demo.yml
app/: interpreter.cpp
docs/: functions.html  index.html  styles.css
documents/: advent_of_code.ml  c_transpiler.txt  cpp_transpiler.txt  fast_language.c  fast_language.txt  grammar.txt  ideas.txt  imperative.txt  manglang.tex  name_resolution.txt  old_readme.md  readable_regular_expressions.txt  stack_memory.txt  transpiling.txt
documents/web/: manglang.html
examples/: aoc_21_01.txt  aoc_21_02.txt  aoc_21_03.txt  aoc_21_05.txt  aoc_21_06.txt  aoc_21_08.txt  aoc_21_09.txt  aoc_21_10.txt  aoc_21_13.txt  aoc_21_14.txt  aoc_22_01.txt  aoc_22_02.txt  aoc_22_03.txt  aoc_22_04.txt  aoc_22_05.txt  aoc_22_06.txt  aoc_22_07.txt  aoc_22_08.txt  aoc_22_09.txt  aoc_22_10.txt  aoc_22_12.txt  aoc_22_13.txt  aoc_22_14.txt  aoc_22_18.txt  aoc_22_21.txt  hello_world.txt  raytracer.txt
lib/: exceptions.cpp  expression.h  expression_type.cpp  factory.cpp  mang_lang.cpp  parsing.cpp
lib/passes/: evaluate.cpp
mang_lang/: ast.py  built_in.py  error_handling.py  evaluating.py  examples.py  global_environment.py  interpreter.py  lexing.py  main.py  parsing.py  slice.py  standard_library.ml  tests.py  token_slice.py  value_array.py
mang_lang/test_data/: test3.ml
mang_lang/tests/: test_equality.py  test_list_functions.py  test_logic_functions.py  test_number_functions.py  test_standard_library.py  tests.py
mang_lang/tests/test_data/: test2.ml  test3.ml
mang_lang_cpp/: CMakeLists.txt  Expression.cpp  Expression.h  SinglyLinkedList.h  abstract_syntax_tree.cpp  abstract_syntax_tree.h  algorithm.h  built_in_functions.cpp  built_in_functions.h  container.cpp  container.h  expression.cpp  expression.h  factory.cpp  factory.h  interpreter.cpp  main.cpp  mang_lang.cpp  mang_lang.h  new_string.cpp  new_string.h  parse_utils.cpp  parse_utils.h  parser.cpp  parser.h  parsing.cpp  parsing.h  tests.cpp
mang_lang_cpp/built_in_functions/: arithmetic.cpp  arithmetic.h  built_in_functions.cpp  built_in_functions.h  dictionary.cpp  dictionary.h  equality.cpp  equality.h  list.cpp  list.h  logic.cpp  logic.h  stack.cpp  stack.h  standard_library.h  table.cpp  table.h
mang_lang_cpp/expressions/: Character.cpp  Character.h  Conditional.cpp  Conditional.h  Dictionary.cpp  Dictionary.h  DictionaryElement.cpp  DictionaryElement.h  Expression.cpp  Expression.h  ExpressionPointer.h  Function.cpp  Function.h  FunctionBuiltIn.cpp  FunctionBuiltIn.h  FunctionDictionary.cpp  FunctionDictionary.h  FunctionList.cpp  FunctionList.h  List.cpp  List.h  ListBase.cpp  ListBase.h  ListStorage.h  LookupChild.cpp  LookupChild.h  LookupFunction.cpp  LookupFunction.h  LookupSymbol.cpp  LookupSymbol.h  Name.cpp  Name.h  Number.cpp  Number.h  String.cpp  String.h
mang_lang_cpp/operations/: apply.cpp  apply.h  begin.cpp  begin.h  boolean.cpp  boolean.h  character.cpp  character.h  empty.cpp  empty.h  end.cpp  end.h  evaluate.cpp  evaluate.h  evaluate_types.cpp  evaluate_types.h  is_equal.cpp  is_equal.h  jump.cpp  jump.h  list.cpp  list.h  lookup.cpp  lookup.h  mutate.cpp  mutate.h  number.cpp  number.h  parse.cpp  parse.h  prepend.cpp  prepend.h  serialize.cpp  serialize.h  serialize_types.cpp  serialize_types.h  starts_with.cpp  starts_with.h
src/: .gitignore  CMakeLists.txt  algorithm.cpp  algorithm.h  container.cpp  container.h  dictionary_name_indexer.cpp  dictionary_name_indexer.h  exceptions.cpp  exceptions.h  expression.cpp  expression.h  expression_type.cpp  expression_type.h  factory.cpp  factory.h  interpreter.cpp  mang_lang.cpp  mang_lang.h  mang_lang_string.h  parsing.cpp  parsing.h  string.cpp  string.h  tests.cpp  type_check.h
src/app/: CMakeLists.txt
src/built_in_functions/: arithmetic.cpp  arithmetic.h  binary_tuple.cpp  binary_tuple.h  built_in_functions.cpp  container.cpp  container.h  stack.cpp  stack.h  standard_library.h  table.cpp  table.h
src/operations/: evaluate.cpp  evaluate.h  evaluate_generic.cpp  evaluate_generic.h  evaluate_types.cpp  parse.cpp  parse.h  serialize.cpp  serialize.h  serialize_generic.h  serialize_types.cpp
src/passes/: bind.cpp  bind.h  evaluate.cpp  parse.cpp  serialize.cpp  serialize.h
